Simple design layout.

--- a/source/app/index.html
+++ b/source/app/index.html
@@ -28,6 +28,8 @@
     <div id="map"></div>
 
     <div id="panel">
+    <h1>Omaha Parks</h1>
+    
     <h3>Neighborhoods</h3>
       <select name="relation" id="relationSelect">
         <option value="within">Northwest Omaha<options>
