--- a/source/app/index.html
+++ b/source/app/index.html
@@ -7,10 +7,7 @@
 
     <!-- Load Esri Leaflet locally, after cloning this repository -->
     <script src="https://unpkg.com/esri-leaflet@2.0.8"></script>
-
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
-
-    <!-- geolocate plugin -->
+    <!-- Geolocate plugin -->
     <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/L.Control.Locate.min.js'></script>
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/L.Control.Locate.mapbox.css' rel='stylesheet' />
     <!--[if lt IE 9]>
@@ -18,39 +15,62 @@
     <![endif]-->
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-locatecontrol/v0.43.0/css/font-awesome.min.css' rel='stylesheet' />
 
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
+
+    <!-- Application -->
     <link href="css/style.css" rel="stylesheet"/>
-    <script src="js/main.js"></script>
 
   </head>
-
   <body>
 
     <div id="map"></div>
 
     <div id="panel">
-    <h1>Omaha Parks</h1>
-    
-    <h3>Neighborhoods</h3>
-      <select name="relation" id="relationSelect">
-        <option value="within">Northwest Omaha<options>
-        <option value="contains">West Omaha<options>
-        <option value="intersects">Boys Town<options>
-        <option value="overlaps">Florence<options>
-      </select>
+     <h1>Omaha Parks</h1>
 
-    <h3>Features</h3>
-      <select name="features" id="featureSelect">
-      <option value="playground">Play structure<options>
-      <option value="surface">Surface<options>
-      <option value="basketball">Basketball court<options>
-      <option value="picnic">Picnic area<options>
-      </select>
+      <h3>Neighborhoods</h3>
+        <select name="relation" id="neighborhoodsSelect">
+          <option value="within">Select...<options>
+          <option value="within">Northwest Omaha<options>
+          <option value="contains">West Omaha<options>
+          <option value="intersects">Boys Town<options>
+          <option value="overlaps">Florence<options>
+        </select>
 
-    <h3>Trails</h3>
-      <input type="checkbox" name="walkingtrails" value="Walking Trails"> Walking Trails<br>
-      <input type="checkbox" name="bikingtrails" value="Biking Trails"> Biking Trails
+      <h3>Sports</h3>
+        <select name="features" id="sportsSelect">
+        <option value="within">Select...<options>
+        <option value="playground">Play structure<options>
+        <option value="surface">Surface<options>
+        <option value="basketball">Basketball court<options>
+        <option value="picnic">Picnic area<options>
+        </select>
 
-    </div>
-    
+      <h3>Playgrounds</h3>
+        <select name="features" id="playgroundsSelect">
+        <option value="within">Select...<options>
+        <option value="playground">Play structure<options>
+        <option value="surface">Surface<options>
+        <option value="basketball">Basketball court<options>
+        <option value="picnic">Picnic area<options>
+        </select>
+
+      <h3>Facilities</h3>
+        <select name="features" id="facilitiesSelect">
+        <option value="within">Select...<options>
+        <option value="playground">Play structure<options>
+        <option value="surface">Surface<options>
+        <option value="basketball">Basketball court<options>
+        <option value="picnic">Picnic area<options>
+        </select>
+
+      <h3>Trails</h3>
+        <input type="checkbox" name="walkingtrails" value="Walking Trails"> Walking Trails<br>
+        <input type="checkbox" name="bikingtrails" value="Biking Trails"> Biking Trails
+
+    </div> <!-- end:panel -->
+
+  <script src="js/main.min.js"></script>
   </body>
 </html>
